feat: Update project configuration and routing
Adjusts package.json to use CommonJS and sets Node engine version. Updates index.html with CDN import maps. Replaces MemoryRouter with HashRouter in App.tsx for better deployment compatibility. Configures Vite for relative paths and updates server.js to serve static files and handle catch-all routes for the React app.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "philosopher-artist-atelier",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "start": "node server.js"
   },
@@ -28,5 +28,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
